prueba-compi/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> avanzar_instr
Rule 5     instruccion -> girarderecha_instr
Rule 6     instruccion -> girarizquierda_instr
Rule 7     avanzar_instr -> AVANZAR PTCOMA
Rule 8     girarderecha_instr -> GIRARDERECHA PTCOMA
Rule 9     girarizquierda_instr -> GIRARIZQUIERDA PTCOMA

Terminals, with rules where they appear

AVANZAR              : 7
GIRARDERECHA         : 8
GIRARIZQUIERDA       : 9
PTCOMA               : 7 8 9
error                : 

Nonterminals, with rules where they appear

avanzar_instr        : 4
girarderecha_instr   : 5
girarizquierda_instr : 6
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . avanzar_instr
    (5) instruccion -> . girarderecha_instr
    (6) instruccion -> . girarizquierda_instr
    (7) avanzar_instr -> . AVANZAR PTCOMA
    (8) girarderecha_instr -> . GIRARDERECHA PTCOMA
    (9) girarizquierda_instr -> . GIRARIZQUIERDA PTCOMA

    AVANZAR         shift and go to state 7
    GIRARDERECHA    shift and go to state 8
    GIRARIZQUIERDA  shift and go to state 9

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    avanzar_instr                  shift and go to state 4
    girarderecha_instr             shift and go to state 5
    girarizquierda_instr           shift and go to state 6

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . avanzar_instr
    (5) instruccion -> . girarderecha_instr
    (6) instruccion -> . girarizquierda_instr
    (7) avanzar_instr -> . AVANZAR PTCOMA
    (8) girarderecha_instr -> . GIRARDERECHA PTCOMA
    (9) girarizquierda_instr -> . GIRARIZQUIERDA PTCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    AVANZAR         shift and go to state 7
    GIRARDERECHA    shift and go to state 8
    GIRARIZQUIERDA  shift and go to state 9

    instruccion                    shift and go to state 10
    avanzar_instr                  shift and go to state 4
    girarderecha_instr             shift and go to state 5
    girarizquierda_instr           shift and go to state 6

state 3

    (3) instrucciones -> instruccion .

    AVANZAR         reduce using rule 3 (instrucciones -> instruccion .)
    GIRARDERECHA    reduce using rule 3 (instrucciones -> instruccion .)
    GIRARIZQUIERDA  reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> avanzar_instr .

    AVANZAR         reduce using rule 4 (instruccion -> avanzar_instr .)
    GIRARDERECHA    reduce using rule 4 (instruccion -> avanzar_instr .)
    GIRARIZQUIERDA  reduce using rule 4 (instruccion -> avanzar_instr .)
    $end            reduce using rule 4 (instruccion -> avanzar_instr .)


state 5

    (5) instruccion -> girarderecha_instr .

    AVANZAR         reduce using rule 5 (instruccion -> girarderecha_instr .)
    GIRARDERECHA    reduce using rule 5 (instruccion -> girarderecha_instr .)
    GIRARIZQUIERDA  reduce using rule 5 (instruccion -> girarderecha_instr .)
    $end            reduce using rule 5 (instruccion -> girarderecha_instr .)


state 6

    (6) instruccion -> girarizquierda_instr .

    AVANZAR         reduce using rule 6 (instruccion -> girarizquierda_instr .)
    GIRARDERECHA    reduce using rule 6 (instruccion -> girarizquierda_instr .)
    GIRARIZQUIERDA  reduce using rule 6 (instruccion -> girarizquierda_instr .)
    $end            reduce using rule 6 (instruccion -> girarizquierda_instr .)


state 7

    (7) avanzar_instr -> AVANZAR . PTCOMA

    PTCOMA          shift and go to state 11


state 8

    (8) girarderecha_instr -> GIRARDERECHA . PTCOMA

    PTCOMA          shift and go to state 12


state 9

    (9) girarizquierda_instr -> GIRARIZQUIERDA . PTCOMA

    PTCOMA          shift and go to state 13


state 10

    (2) instrucciones -> instrucciones instruccion .

    AVANZAR         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    GIRARDERECHA    reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    GIRARIZQUIERDA  reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 11

    (7) avanzar_instr -> AVANZAR PTCOMA .

    AVANZAR         reduce using rule 7 (avanzar_instr -> AVANZAR PTCOMA .)
    GIRARDERECHA    reduce using rule 7 (avanzar_instr -> AVANZAR PTCOMA .)
    GIRARIZQUIERDA  reduce using rule 7 (avanzar_instr -> AVANZAR PTCOMA .)
    $end            reduce using rule 7 (avanzar_instr -> AVANZAR PTCOMA .)


state 12

    (8) girarderecha_instr -> GIRARDERECHA PTCOMA .

    AVANZAR         reduce using rule 8 (girarderecha_instr -> GIRARDERECHA PTCOMA .)
    GIRARDERECHA    reduce using rule 8 (girarderecha_instr -> GIRARDERECHA PTCOMA .)
    GIRARIZQUIERDA  reduce using rule 8 (girarderecha_instr -> GIRARDERECHA PTCOMA .)
    $end            reduce using rule 8 (girarderecha_instr -> GIRARDERECHA PTCOMA .)


state 13

    (9) girarizquierda_instr -> GIRARIZQUIERDA PTCOMA .

    AVANZAR         reduce using rule 9 (girarizquierda_instr -> GIRARIZQUIERDA PTCOMA .)
    GIRARDERECHA    reduce using rule 9 (girarizquierda_instr -> GIRARIZQUIERDA PTCOMA .)
    GIRARIZQUIERDA  reduce using rule 9 (girarizquierda_instr -> GIRARIZQUIERDA PTCOMA .)
    $end            reduce using rule 9 (girarizquierda_instr -> GIRARIZQUIERDA PTCOMA .)

